update readme and code to use the custom aframe built

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         };
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/gh/mvilledieu/aframe@d34d95811af5f3fb865d70b888734ffae6544e8c/dist/aframe-master.min.js"></script>
+    <script src="https://unpkg.com/ml-aframe@0.9.2-rc01/dist/aframe-master.min.js"></script>
   </head>
   <body>
     <a-scene>
