--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         };
       }
     </script>
-    <script src="https://unpkg.com/ml-aframe@0.9.2-rc01/dist/aframe-master.min.js"></script>
+    <script src="https://unpkg.com/ml-aframe@0.9.2/dist/aframe-master.min.js"></script>
   </head>
   <body>
     <a-scene>
